Signed-off-by: jason <liuqiyuan_jason@outlook.com>

--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="ZH-CN">
+<!--源码部分by jason-->
+<!--请尊重被爬虫网站的正当权利-->
+<!--最终解释权归jason所有-->
+<!--使用即代表您同意并愿意遵守中华人民共和国相关法律,您所在地区的法律和用户协议-->
   <head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="./image/favicon.ico">
+    <!--百度统计-->
     <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?c92d79ef9958f26508ab64918b1b2923";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-  <title>spider</title>
+      var _hmt = _hmt || [];
+      (function() {
+         var hm = document.createElement("script");
+         hm.src = "https://hm.baidu.com/hm.js?c92d79ef9958f26508ab64918b1b2923";
+         var s = document.getElementsByTagName("script")[0];
+         s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
+    <title>spider</title>
   </head>
   <body>
     <p>this is a website of spider-gitee</p>
