Signed-off-by: jason <liuqiyuan_jason@outlook.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <!--使用即代表您同意并愿意遵守中华人民共和国相关法律,您所在地区的法律和用户协议-->
   <head>
     <meta charset="UTF-8">
+    <!--图标,如没有指定,默认favicon.ico-->
+    <!--
     <link rel="icon" href="./image/favicon.ico">
+    -->
     <!--百度统计-->
     <script>
       var _hmt = _hmt || [];
