Signed-off-by: jason <liuqiyuan_jason@outlook.com>

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
       })();
     </script>
     <title>spider</title>
-  </head>
+    <style>
+        body {
+          background: linear-gradient(to right, #ff7e5f, #feb47b);
+          margin: 0;
+          height: 100vh;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+    </style>
+</head>
   <body>
     <p>this is a website of spider-gitee</p>
   </body>
