--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <head>
     <meta charset="UTF-8">
     <!--图标,如没有指定,默认favicon.ico-->
-    <!--
+
     <link rel="icon" href="./image/favicon.ico">
-    -->
+    
     <!--百度统计-->
     <script>
       var _hmt = _hmt || [];
@@ -23,7 +23,7 @@
     <title>spider</title>
     <style>
         body {
-          background: linear-gradient(to right, #ff7e5f, #feb47b);
+          background: linear-gradient(to right, #0040ff, #eb00f7);
           margin: 0;
           height: 100vh;
           display: flex;
@@ -34,6 +34,9 @@
     </style>
 </head>
   <body>
-    <p>this is a website of spider-gitee</p>
+    <p style="font-family:楷体;color:black;font-size:60px;">欢迎访问 </p>
+    <p style="font-family:Times New Roman;color:black;font-size:60px">spider</p>
+    <br>
+    <input type="text" name="http_txt" placeholder="请输入网址">
   </body>
 </html>
